--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,12 @@
       "matchStrings": ["depName=(?<depName>.*?)?\\s.*?_COMMIT=\"(?<currentValue>)(?<currentDigest>.*?)\""],
       "versioningTemplate": "git",
       "datasourceTemplate": "git-refs"
+    },
+    {
+      "fileMatch": ["build.yml"],
+      "matchStrings": ["depName=(?<depName>.*?)?\\s.*?_VERSION=\"(?<currentValue>.*?)\""],
+      "versioningTemplate": "docker",
+      "datasourceTemplate": "github-releases"
     }
   ]
 }
