ReReReFix CI (I forgot a 'v')

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           cd bin
 
           # depName=rsms/inter
-          RESVG_VERSION="0.41.0"
+          RESVG_VERSION="v0.40.0"
 
           wget "https://github.com/RazrFalcon/resvg/releases/download/${RESVG_VERSION}/resvg-linux-x86_64.tar.gz"
           tar xf resvg-linux-x86_64.tar.gz
