--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,9 @@ jobs:
           automatic_release_tag: "latest"
           prerelease: true
           title: "Development Build"
-          files: "target/*"
+          files: |
+            target/*
+            resources.tar
 
       - name: tagged-release
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -50,5 +52,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
-          files: "target/*"
+          files: |
+            target/*
+            resources.tar
 
