--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           mkdir bin
           cd bin
 
-          # depName=rsms/inter
+          # depName=RazrFalcon/resvg
           RESVG_VERSION="v0.40.0"
 
           wget "https://github.com/RazrFalcon/resvg/releases/download/${RESVG_VERSION}/resvg-linux-x86_64.tar.gz"
