--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
       "datasourceTemplate": "git-refs"
     },
     {
-      "fileMatch": ["build.yml"],
+      "fileMatch": [".github/workflows/build.yml"],
       "matchStrings": ["depName=(?<depName>.*?)?\\s.*?_VERSION=\"(?<currentValue>.*?)\""],
       "versioningTemplate": "docker",
       "datasourceTemplate": "github-releases"
