Minimize renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -12,9 +12,7 @@
     {
       "fileMatch": [
         "build.yml",
-        "release.yml",
-        "(^|/)(workflow-templates|\\.(?:github|gitea|forgejo)/(?:workflows|actions))/.+\\.ya?ml$",
-        "(^|/)action\\.ya?ml$"
+        "release.yml"
       ],
       "matchStrings": ["depName=(?<depName>.*?)?\\s.*?_VERSION=\"(?<currentValue>.*?)\""],
       "versioningTemplate": "docker",
