--- a/.github/workflows/shellcheck_commit.yml
+++ b/.github/workflows/shellcheck_commit.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   shellcheck:
     name: runner / shellcheck
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
       - name: shellcheck
