--- a/.github/workflows/shellcheck_pullreq.yml
+++ b/.github/workflows/shellcheck_pullreq.yml
@@ -3,7 +3,7 @@ on: [pull_request]
 jobs:
   shellcheck:
     name: runner / shellcheck
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
       - name: shellcheck
