--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,21 +36,20 @@ jobs:
           PATH="./bin/:$PATH" ./build.sh
 
       - name: pre-release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: softprops/action-gh-release@v2.0.5
+        if: "! startsWith(github.ref, 'refs/tags/')"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
+          tag_name: "latest"
           prerelease: true
-          title: "Development Build"
+          name: "Development Build"
           files: |
             target/*
             resources.tar
 
       - name: tagged-release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: softprops/action-gh-release@v2.0.5
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
             target/*
